--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
+/* import font */
+@import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Share Tech Mono;
 }
