--- a/style.css
+++ b/style.css
@@ -7,3 +7,8 @@
     box-sizing: border-box;
     font-family: Share Tech Mono;
 }
+
+body{
+    background-color: #e7f3e0;
+    min-height: 100vh;
+}
