--- a/style.css
+++ b/style.css
@@ -11,4 +11,13 @@
 body{
     background-color: #e7f3e0;
     min-height: 100vh;
+    width: 100%;
+    padding: 1rem;
+}
+
+header, main, footer{
+    padding: 1rem;
+    background-color: #c9e2bb;
+    width: 80%;
+    margin: auto;
 }
