temporary border colors

--- a/style.css
+++ b/style.css
@@ -6,6 +6,8 @@
     --text-secondary: #21251f;
     --main-bg: #e7f3e0;
     --dark-bg: #cbe3bd;
+    --main-border: #8f988a;
+    --dark-border: #6e7c65;
 }
 
 *{
