media query set up

--- a/style.css
+++ b/style.css
@@ -61,3 +61,20 @@ footer .credits{
 #success-message{
     display: none;
 }
+
+/* media query */
+@media screen and (max-width: 1024px){
+    
+}
+
+@media screen and (max-width: 768px){
+    
+}
+
+@media screen and (max-width: 605px){
+    
+}
+
+@media screen and (max-width: 480px){
+    
+}
