darker borer in the root

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     --main-bg: #e7f3e0;
     --dark-bg: #cbe3bd;
     --main-border: #8f988a;
-    --dark-border: #6e7c65;
+    --dark-border: #5e6b57;
 }
 
 *{
