--- a/style.css
+++ b/style.css
@@ -41,13 +41,17 @@ h1{
 /* header */
 
 /* main */
+.up-section{
+    text-align: center;
+}
+
 .subtitle{
     color: var(--text-secondary);
     font-size: 1rem;
-    margin-bottom: 3rem;
+    margin-bottom: 2rem;
 }
 
-.form-container h2, .right-section h2{
+.right-section h2{
     font-size: 1.2rem;
     margin-bottom: 1rem;
 }
