--- a/style.css
+++ b/style.css
@@ -51,6 +51,10 @@ h1{
     margin-bottom: 2rem;
 }
 
+input{
+    margin-bottom: 0.8rem;
+}
+
 .right-section h2{
     font-size: 1.2rem;
     margin-bottom: 1rem;
