--- a/style.css
+++ b/style.css
@@ -55,6 +55,10 @@ input{
     margin-bottom: 0.8rem;
 }
 
+textarea{
+    width: 16%;
+}
+
 .right-section h2{
     font-size: 1.2rem;
     margin-bottom: 1rem;
