--- a/style.css
+++ b/style.css
@@ -43,6 +43,7 @@ h1{
 /* main */
 .up-section{
     text-align: center;
+    margin-bottom: 2rem;
 }
 
 .subtitle{
@@ -59,7 +60,11 @@ textarea{
     width: 16%;
 }
 
-.right-section h2{
+.down-section{
+    padding: 1rem 3.5rem;
+}
+
+.down-section h2{
     font-size: 1.2rem;
     margin-bottom: 1rem;
 }
