--- a/style.css
+++ b/style.css
@@ -69,6 +69,10 @@ textarea{
     margin-bottom: 1rem;
 }
 
+.question-content h3{
+    margin-bottom: 0.3rem;
+}
+
 /* footer */
 footer .credits{
     text-align: center;
