--- a/style.css
+++ b/style.css
@@ -70,7 +70,8 @@ textarea{
 }
 
 .question-content h3{
-    margin-bottom: 0.3rem;
+    margin-bottom: 0.1rem;
+    margin-top: 0.6rem;
 }
 
 /* footer */
