--- a/style.css
+++ b/style.css
@@ -62,6 +62,16 @@ textarea{
     width: 16%;
 }
 
+button{
+    border: none;
+    padding: 0.5px 2px;
+}
+
+button:hover{
+    cursor: pointer;
+    transform: scale(1.02);
+}
+
 .down-section{
     padding: 1rem 3.5rem;
 }
@@ -80,6 +90,7 @@ textarea{
 footer .credits{
     text-align: center;
     font-style: italic;
+    font-size: x-small;
 }
 
 /* message status */
