--- a/style.css
+++ b/style.css
@@ -131,7 +131,14 @@ footer .credits{
 
 @media screen and (max-width: 605px){
 
-    
+    textarea{
+    width: 50%;
+    }
+
+    .down-section{
+        padding: 1rem;
+    }
+
 }
 
 
