--- a/style.css
+++ b/style.css
@@ -73,16 +73,19 @@ button:hover{
 }
 
 #success-message{
-    margin-top: 2rem;
+    margin: 2rem auto;
     color: #5e6b57;
     font-weight: 600;
     font-size: x-large;
     font-style: italic;
+    background-color: #e7f3e0;
+    padding: 1rem 2rem;
+    width: 70%;
 }
 
-/* .hidden{
+.hidden{
     display: none;
-} */
+}
 
 .down-section{
     padding: 1rem 3.5rem;
