--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ footer .credits{
 @media screen and (max-width: 605px){
 
     textarea{
-    width: 80%;
+        width: 80%;
     }
 
     .down-section{
@@ -165,7 +165,11 @@ footer .credits{
 @media screen and (max-width: 480px){
     
     textarea{
-    width: 80%;
+        width: 80%;
+    }
+
+    #success-message, #unsuccess-message{
+        font-size: larger;
     }
 
     .down-section{
